# dzy_gxgz_my

./: CMakeLists.txt  run_sppm.sh
include/: bound.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  hit_kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object_kdtree.hpp  plane.hpp  ray.hpp  render.hpp  revsurface.hpp  scene.hpp  sphere.hpp  triangle.hpp
src/: main.cpp
